# public-drive-property-ocr-cloud

./: .gitignore  CODEX.md  README.md  pyproject.toml  pytest.ini  requirements.txt  tmp_newline_test.txt  tmp_newline_test2.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  property-ocr.yml  readme-setup-guide.yml
app/: __init__.py  config.py  db.py  main.py
app/services/: auth.py  exporter.py  ocr.py  volume.py
app/static/: app.js  index.html  styles.css
docs/: architecture.md  architecture.mmd  beginner-setup.md  database.md  gpt-action-openapi.yaml  logic-flow.mmd  setup-guide-trigger.md  setup-visual-guide.md  setup.md
property_ocr_pipeline/: __main__.py  all.py  analyzer.py  cli.py  db.py  drive.py  extractors.py  models.py  reports.py
sample_data/: sample_property.txt
samples/: higashiosaka-rc.csv  osaka-apartment.txt  property_text.txt
scripts/: generate_sample_outputs.py
src/property_ocr/: __init__.py  cli.py  downloader.py  extract.py  outputs.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_cli.py  test_extract.py  test_outputs.py  test_reports.py  test_smoke.py
